A few misc improvements. Attempting to implement gdpr rules. This is a temporary commit