@@ -5,7 +5,7 @@ import io.aglais.roar.annotations.processors.schema.SchemaProcessor;
 import org.apache.avro.Schema;
 import org.apache.avro.reflect.ReflectData;
 
-import java.util.Collections;
+import java.lang.reflect.InvocationTargetException;
 import java.util.HashMap;
 import java.util.Map;
 
@@ -15,7 +15,7 @@ public class RoarReflectData extends ReflectData {
     private static final Map<Class<?>, Schema> CACHED_SCHEMAS = new HashMap<>();
 
 
-    public synchronized Schema getSchema(Class<?> clazz) throws IllegalAccessException, InstantiationException {
+    public synchronized Schema getSchema(Class<?> clazz) throws IllegalAccessException, InstantiationException, NoSuchMethodException, InvocationTargetException {
 
         if (CACHED_SCHEMAS.containsKey(clazz)) {
             return CACHED_SCHEMAS.get(clazz);
@@ -25,7 +25,7 @@ public class RoarReflectData extends ReflectData {
 
         RoarSchema roarSchema = clazz.getAnnotation(RoarSchema.class);
 
-        SchemaProcessor schemaProcessor = roarSchema.processor().newInstance();
+        SchemaProcessor schemaProcessor = roarSchema.processor().getConstructor().newInstance();
 
         schemaProcessor.initialize(schema, clazz, getConfigProperties());
 
@@ -34,7 +34,7 @@ public class RoarReflectData extends ReflectData {
         return schema;
     }
 
-    private Map<String, Object> getConfigProperties(){
+    private Map<String, Object> getConfigProperties() {
 
         Map<String, Object> map = new HashMap<>();
 
